# AgentOS

./: .gitignore  README.md
backend/: .env.example  README_DAY1.md  README_DAY3.md  pyproject.toml  requirements.txt  seed_domain.py  smoke_test.py  verify_graph.py  verify_pipeline.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: domains.py  sessions.py  sources.py
backend/app/db/: __init__.py  models.py  schema.sql  session.py
backend/app/memory/: __init__.py  client.py  cognee_lifecycle.py  domain_manager.py  reranker.py
backend/app/orchestrator/: session.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/lib/: api.ts
